migrate dropwizard